# ChattingPlatform

./: CMakeLists.txt  CMakeLists.txt.user.06e5f42  CMakeLists.txt.user.5726fd7  Chat.cpp  Chat.hpp  Hmap  Hmap.cpp  Hmap.hpp  LinkedList.cpp  LinkedList.hpp  Message.cpp  Message.hpp  Person.cpp  README.md  SystemManager.cpp  SystemManager.hpp  User.cpp  User.hpp  addaccountpage.cpp  addaccountpage.h  addaccountpage.ui  chatdata.txt  chatpage.cpp  chatpage.h  chatpage.ui  createchatpage.cpp  createchatpage.h  createchatpage.ui  loginpage.cpp  loginpage.h  loginpage.ui  main.cpp  mainpage.cpp  mainpage.h  mainpage.ui  messagedata.txt  newuserpage.cpp  newuserpage.h  newuserpage.ui  signuppage.cpp  (+3 more)
